--- a/journeyservice/slo.yaml
+++ b/journeyservice/slo.yaml
@@ -26,7 +26,9 @@ objectives:
   key_sli: false
 - sli: throughput
   displayName: ""
-  pass:[]
+   pass:
+  - criteria:
+    - <200
   weight: 1
   key_sli: false
 total_score:
