--- a/journeyservice/slo.yaml
+++ b/journeyservice/slo.yaml
@@ -6,7 +6,7 @@ comparison:
   number_of_comparison_results: 1
   aggregate_function: avg
 objectives:
-- sli: response_time_p95
+  - sli: response_time_p95
   displayName: ""
   pass:
   - criteria:
@@ -26,12 +26,14 @@ objectives:
     - <=1000
   weight: 1
   key_sli: false
-- sli: error_rate
+  - sli: error_rate
   displayName: ""
   pass:
   - criteria:
     - <5
-  warning: []
+  warning:
+  - criteria:
+    - <10
   weight: 1
   key_sli: false
 - sli: throughput
