--- a/journeyservice/slo.yaml
+++ b/journeyservice/slo.yaml
@@ -21,9 +21,7 @@ objectives:
   pass:
   - criteria:
     - <5
-  warning:
-  - criteria:
-    - <10
+  warning: []
   weight: 1
   key_sli: false
 - sli: throughput
