--- a/journeyservice/slo.yaml
+++ b/journeyservice/slo.yaml
@@ -26,7 +26,9 @@ objectives:
   key_sli: false
 - sli: throughput
   displayName: ""
-  pass: []
+  pass:
+  - criteria:
+    - <2000
   warning: []
   weight: 0
   key_sli: false
