--- a/demo/slo.yaml
+++ b/demo/slo.yaml
@@ -6,7 +6,7 @@ comparison:
     number_of_comparison_results: 1
     aggregate_function: avg
 objectives:
-    - sli: cpu_usage
+    - sli: svc_cpu_usage
       displayName: ""
       pass:
         - criteria:
@@ -15,12 +15,12 @@ objectives:
       warning: []
       weight: 1
       key_sli: false
-    - sli: response_time
+    - sli: svc_response_time
       displayName: ""
       pass:
         - criteria:
             - <+10%
-            - <20
+            - <600
       warning: []
       weight: 1
       key_sli: false
