--- a/demo/slo.yaml
+++ b/demo/slo.yaml
@@ -11,8 +11,9 @@ objectives:
       pass:
         - criteria:
             - <+10%
-            - <0.20
-      warning: []
+      warning:
+        - criteria:
+            - <15%
       weight: 1
       key_sli: false
 total_score:
