--- a/demo/dynatrace/sli.yaml
+++ b/demo/dynatrace/sli.yaml
@@ -1,3 +1,3 @@
 spec_version: 0.1.4
 indicators:
-    svc_cpu_usage: ""
+    svc_cpu_usage: metricSelector=builtin:host.cpu.usage:splitBy():avg:names
