--- a/user1/dynatrace/sli.yaml
+++ b/user1/dynatrace/sli.yaml
@@ -1,3 +1,4 @@
 spec_version: 0.1.4
 indicators:
-    perf: metricSelector=builtin:service.response.time:splitBy():avg:names
+    perf: MV2;MicroSecond;metricSelector=builtin:service.response.time:splitBy():avg:names
+    perf1: MV2;MicroSecond;metricSelector=builtin:service.response.time:splitBy():avg:names
