--- a/user2/dynatrace/sli.yaml
+++ b/user2/dynatrace/sli.yaml
@@ -1,4 +1,3 @@
 spec_version: 0.1.4
 indicators:
-    perf: MV2;MicroSecond;metricSelector=builtin:service.response.time:splitBy():avg:names
-    perf1: MV2;MicroSecond;metricSelector=builtin:service.response.time:splitBy():avg:names
+    service_cpu: ""
