--- a/user3/dynatrace/sli.yaml
+++ b/user3/dynatrace/sli.yaml
@@ -1,81 +1,4 @@
 spec_version: 0.1.4
 indicators:
-    service_cpu: MV2;MicroSecond;metricSelector=builtin:service.cpu.perRequest:splitBy():auto:names
-    service_rt__: MV2;MicroSecond;metricSelector=builtin:service.response.server:splitBy("dt.entity.service"):auto:names:filter(eq(dt.entity.service,/))
-    service_rt_AuthenticationService: MV2;MicroSecond;metricSelector=builtin:service.response.server:splitBy("dt.entity.service"):auto:names:filter(eq(dt.entity.service,AuthenticationService))
-    service_rt_BookingService: MV2;MicroSecond;metricSelector=builtin:service.response.server:splitBy("dt.entity.service"):auto:names:filter(eq(dt.entity.service,BookingService))
-    service_rt_ConfigurationService: MV2;MicroSecond;metricSelector=builtin:service.response.server:splitBy("dt.entity.service"):auto:names:filter(eq(dt.entity.service,ConfigurationService))
-    service_rt_CreditCardValidation: MV2;MicroSecond;metricSelector=builtin:service.response.server:splitBy("dt.entity.service"):auto:names:filter(eq(dt.entity.service,CreditCardValidation))
-    service_rt_CustomerFrontendREST: MV2;MicroSecond;metricSelector=builtin:service.response.server:splitBy("dt.entity.service"):auto:names:filter(eq(dt.entity.service,CustomerFrontendREST))
-    service_rt_EasytravelService: MV2;MicroSecond;metricSelector=builtin:service.response.server:splitBy("dt.entity.service"):auto:names:filter(eq(dt.entity.service,EasytravelService))
-    service_rt_FinanceService: MV2;MicroSecond;metricSelector=builtin:service.response.server:splitBy("dt.entity.service"):auto:names:filter(eq(dt.entity.service,FinanceService))
-    service_rt_Internal_service: MV2;MicroSecond;metricSelector=builtin:service.response.server:splitBy("dt.entity.service"):auto:names:filter(eq(dt.entity.service,Internal service))
-    service_rt_JourneyService: MV2;MicroSecond;metricSelector=builtin:service.response.server:splitBy("dt.entity.service"):auto:names:filter(eq(dt.entity.service,JourneyService))
-    service_rt_My_booking_service: MV2;MicroSecond;metricSelector=builtin:service.response.server:splitBy("dt.entity.service"):auto:names:filter(eq(dt.entity.service,My booking service))
-    service_rt_Netty_on_localhost:50901: MV2;MicroSecond;metricSelector=builtin:service.response.server:splitBy("dt.entity.service"):auto:names:filter(eq(dt.entity.service,Netty on localhost:50901))
-    service_rt_Netty_on_localhost:51099: MV2;MicroSecond;metricSelector=builtin:service.response.server:splitBy("dt.entity.service"):auto:names:filter(eq(dt.entity.service,Netty on localhost:51099))
-    service_rt_Netty_on_localhost:51190: MV2;MicroSecond;metricSelector=builtin:service.response.server:splitBy("dt.entity.service"):auto:names:filter(eq(dt.entity.service,Netty on localhost:51190))
-    service_rt_Netty_on_localhost:51419: MV2;MicroSecond;metricSelector=builtin:service.response.server:splitBy("dt.entity.service"):auto:names:filter(eq(dt.entity.service,Netty on localhost:51419))
-    service_rt_Netty_on_localhost:51798: MV2;MicroSecond;metricSelector=builtin:service.response.server:splitBy("dt.entity.service"):auto:names:filter(eq(dt.entity.service,Netty on localhost:51798))
-    service_rt_Netty_on_localhost:51849: MV2;MicroSecond;metricSelector=builtin:service.response.server:splitBy("dt.entity.service"):auto:names:filter(eq(dt.entity.service,Netty on localhost:51849))
-    service_rt_Netty_on_localhost:51987: MV2;MicroSecond;metricSelector=builtin:service.response.server:splitBy("dt.entity.service"):auto:names:filter(eq(dt.entity.service,Netty on localhost:51987))
-    service_rt_Netty_on_localhost:52398: MV2;MicroSecond;metricSelector=builtin:service.response.server:splitBy("dt.entity.service"):auto:names:filter(eq(dt.entity.service,Netty on localhost:52398))
-    service_rt_Netty_on_localhost:52476: MV2;MicroSecond;metricSelector=builtin:service.response.server:splitBy("dt.entity.service"):auto:names:filter(eq(dt.entity.service,Netty on localhost:52476))
-    service_rt_Netty_on_localhost:52620: MV2;MicroSecond;metricSelector=builtin:service.response.server:splitBy("dt.entity.service"):auto:names:filter(eq(dt.entity.service,Netty on localhost:52620))
-    service_rt_Netty_on_localhost:53117: MV2;MicroSecond;metricSelector=builtin:service.response.server:splitBy("dt.entity.service"):auto:names:filter(eq(dt.entity.service,Netty on localhost:53117))
-    service_rt_Netty_on_localhost:53182: MV2;MicroSecond;metricSelector=builtin:service.response.server:splitBy("dt.entity.service"):auto:names:filter(eq(dt.entity.service,Netty on localhost:53182))
-    service_rt_Netty_on_localhost:53304: MV2;MicroSecond;metricSelector=builtin:service.response.server:splitBy("dt.entity.service"):auto:names:filter(eq(dt.entity.service,Netty on localhost:53304))
-    service_rt_Netty_on_localhost:53657: MV2;MicroSecond;metricSelector=builtin:service.response.server:splitBy("dt.entity.service"):auto:names:filter(eq(dt.entity.service,Netty on localhost:53657))
-    service_rt_Netty_on_localhost:53837: MV2;MicroSecond;metricSelector=builtin:service.response.server:splitBy("dt.entity.service"):auto:names:filter(eq(dt.entity.service,Netty on localhost:53837))
-    service_rt_Netty_on_localhost:54048: MV2;MicroSecond;metricSelector=builtin:service.response.server:splitBy("dt.entity.service"):auto:names:filter(eq(dt.entity.service,Netty on localhost:54048))
-    service_rt_Netty_on_localhost:54121: MV2;MicroSecond;metricSelector=builtin:service.response.server:splitBy("dt.entity.service"):auto:names:filter(eq(dt.entity.service,Netty on localhost:54121))
-    service_rt_Netty_on_localhost:54289: MV2;MicroSecond;metricSelector=builtin:service.response.server:splitBy("dt.entity.service"):auto:names:filter(eq(dt.entity.service,Netty on localhost:54289))
-    service_rt_Netty_on_localhost:54538: MV2;MicroSecond;metricSelector=builtin:service.response.server:splitBy("dt.entity.service"):auto:names:filter(eq(dt.entity.service,Netty on localhost:54538))
-    service_rt_Netty_on_localhost:54613: MV2;MicroSecond;metricSelector=builtin:service.response.server:splitBy("dt.entity.service"):auto:names:filter(eq(dt.entity.service,Netty on localhost:54613))
-    service_rt_Netty_on_localhost:54690: MV2;MicroSecond;metricSelector=builtin:service.response.server:splitBy("dt.entity.service"):auto:names:filter(eq(dt.entity.service,Netty on localhost:54690))
-    service_rt_Netty_on_localhost:55171: MV2;MicroSecond;metricSelector=builtin:service.response.server:splitBy("dt.entity.service"):auto:names:filter(eq(dt.entity.service,Netty on localhost:55171))
-    service_rt_Netty_on_localhost:55374: MV2;MicroSecond;metricSelector=builtin:service.response.server:splitBy("dt.entity.service"):auto:names:filter(eq(dt.entity.service,Netty on localhost:55374))
-    service_rt_Netty_on_localhost:55455: MV2;MicroSecond;metricSelector=builtin:service.response.server:splitBy("dt.entity.service"):auto:names:filter(eq(dt.entity.service,Netty on localhost:55455))
-    service_rt_Netty_on_localhost:55512: MV2;MicroSecond;metricSelector=builtin:service.response.server:splitBy("dt.entity.service"):auto:names:filter(eq(dt.entity.service,Netty on localhost:55512))
-    service_rt_Netty_on_localhost:55749: MV2;MicroSecond;metricSelector=builtin:service.response.server:splitBy("dt.entity.service"):auto:names:filter(eq(dt.entity.service,Netty on localhost:55749))
-    service_rt_Netty_on_localhost:55819: MV2;MicroSecond;metricSelector=builtin:service.response.server:splitBy("dt.entity.service"):auto:names:filter(eq(dt.entity.service,Netty on localhost:55819))
-    service_rt_Netty_on_localhost:56108: MV2;MicroSecond;metricSelector=builtin:service.response.server:splitBy("dt.entity.service"):auto:names:filter(eq(dt.entity.service,Netty on localhost:56108))
-    service_rt_Netty_on_localhost:56155: MV2;MicroSecond;metricSelector=builtin:service.response.server:splitBy("dt.entity.service"):auto:names:filter(eq(dt.entity.service,Netty on localhost:56155))
-    service_rt_Netty_on_localhost:56222: MV2;MicroSecond;metricSelector=builtin:service.response.server:splitBy("dt.entity.service"):auto:names:filter(eq(dt.entity.service,Netty on localhost:56222))
-    service_rt_Netty_on_localhost:57428: MV2;MicroSecond;metricSelector=builtin:service.response.server:splitBy("dt.entity.service"):auto:names:filter(eq(dt.entity.service,Netty on localhost:57428))
-    service_rt_Netty_on_localhost:59178: MV2;MicroSecond;metricSelector=builtin:service.response.server:splitBy("dt.entity.service"):auto:names:filter(eq(dt.entity.service,Netty on localhost:59178))
-    service_rt_Netty_on_localhost:62052: MV2;MicroSecond;metricSelector=builtin:service.response.server:splitBy("dt.entity.service"):auto:names:filter(eq(dt.entity.service,Netty on localhost:62052))
-    service_rt_Netty_on_localhost:62164: MV2;MicroSecond;metricSelector=builtin:service.response.server:splitBy("dt.entity.service"):auto:names:filter(eq(dt.entity.service,Netty on localhost:62164))
-    service_rt_Netty_on_localhost:62644: MV2;MicroSecond;metricSelector=builtin:service.response.server:splitBy("dt.entity.service"):auto:names:filter(eq(dt.entity.service,Netty on localhost:62644))
-    service_rt_Netty_on_localhost:62711: MV2;MicroSecond;metricSelector=builtin:service.response.server:splitBy("dt.entity.service"):auto:names:filter(eq(dt.entity.service,Netty on localhost:62711))
-    service_rt_Netty_on_localhost:62764: MV2;MicroSecond;metricSelector=builtin:service.response.server:splitBy("dt.entity.service"):auto:names:filter(eq(dt.entity.service,Netty on localhost:62764))
-    service_rt_Netty_on_localhost:63006: MV2;MicroSecond;metricSelector=builtin:service.response.server:splitBy("dt.entity.service"):auto:names:filter(eq(dt.entity.service,Netty on localhost:63006))
-    service_rt_Netty_on_localhost:63189: MV2;MicroSecond;metricSelector=builtin:service.response.server:splitBy("dt.entity.service"):auto:names:filter(eq(dt.entity.service,Netty on localhost:63189))
-    service_rt_Netty_on_localhost:63313: MV2;MicroSecond;metricSelector=builtin:service.response.server:splitBy("dt.entity.service"):auto:names:filter(eq(dt.entity.service,Netty on localhost:63313))
-    service_rt_Netty_on_localhost:63466: MV2;MicroSecond;metricSelector=builtin:service.response.server:splitBy("dt.entity.service"):auto:names:filter(eq(dt.entity.service,Netty on localhost:63466))
-    service_rt_Netty_on_localhost:63634: MV2;MicroSecond;metricSelector=builtin:service.response.server:splitBy("dt.entity.service"):auto:names:filter(eq(dt.entity.service,Netty on localhost:63634))
-    service_rt_Netty_on_localhost:63712: MV2;MicroSecond;metricSelector=builtin:service.response.server:splitBy("dt.entity.service"):auto:names:filter(eq(dt.entity.service,Netty on localhost:63712))
-    service_rt_Netty_on_localhost:63934: MV2;MicroSecond;metricSelector=builtin:service.response.server:splitBy("dt.entity.service"):auto:names:filter(eq(dt.entity.service,Netty on localhost:63934))
-    service_rt_Netty_on_localhost:64058: MV2;MicroSecond;metricSelector=builtin:service.response.server:splitBy("dt.entity.service"):auto:names:filter(eq(dt.entity.service,Netty on localhost:64058))
-    service_rt_Netty_on_localhost:64121: MV2;MicroSecond;metricSelector=builtin:service.response.server:splitBy("dt.entity.service"):auto:names:filter(eq(dt.entity.service,Netty on localhost:64121))
-    service_rt_Netty_on_localhost:64474: MV2;MicroSecond;metricSelector=builtin:service.response.server:splitBy("dt.entity.service"):auto:names:filter(eq(dt.entity.service,Netty on localhost:64474))
-    service_rt_Netty_on_localhost:64536: MV2;MicroSecond;metricSelector=builtin:service.response.server:splitBy("dt.entity.service"):auto:names:filter(eq(dt.entity.service,Netty on localhost:64536))
-    service_rt_Netty_on_localhost:64606: MV2;MicroSecond;metricSelector=builtin:service.response.server:splitBy("dt.entity.service"):auto:names:filter(eq(dt.entity.service,Netty on localhost:64606))
-    service_rt_Netty_on_localhost:65118: MV2;MicroSecond;metricSelector=builtin:service.response.server:splitBy("dt.entity.service"):auto:names:filter(eq(dt.entity.service,Netty on localhost:65118))
-    service_rt_Requests_executed_in_background_threads_of_Code*Service.exe: MV2;MicroSecond;metricSelector=builtin:service.response.server:splitBy("dt.entity.service"):auto:names:filter(eq(dt.entity.service,Requests executed in background threads of Code*Service.exe))
-    service_rt_Requests_executed_in_background_threads_of_IIS_app_pool_dotNetBackend_easyTravel_x64: MV2;MicroSecond;metricSelector=builtin:service.response.server:splitBy("dt.entity.service"):auto:names:filter(eq(dt.entity.service,Requests executed in background threads of IIS app pool dotNetBackend_easyTravel_x64))
-    service_rt_Requests_executed_in_background_threads_of_com.dynatrace.easytravel.business.backend.jar_easyTravel_(x*): MV2;MicroSecond;metricSelector=builtin:service.response.server:splitBy("dt.entity.service"):auto:names:filter(eq(dt.entity.service,Requests executed in background threads of com.dynatrace.easytravel.business.backend.jar easyTravel (x*)))
-    service_rt_Requests_executed_in_background_threads_of_com.dynatrace.easytravel.customer.frontend.jar_easyTravel_(x*): MV2;MicroSecond;metricSelector=builtin:service.response.server:splitBy("dt.entity.service"):auto:names:filter(eq(dt.entity.service,Requests executed in background threads of com.dynatrace.easytravel.customer.frontend.jar easyTravel (x*)))
-    service_rt_Requests_executed_in_background_threads_of_com.dynatrace.easytravel.customer.frontend.rest.jar_easyTravel_(x*): MV2;MicroSecond;metricSelector=builtin:service.response.server:splitBy("dt.entity.service"):auto:names:filter(eq(dt.entity.service,Requests executed in background threads of com.dynatrace.easytravel.customer.frontend.rest.jar easyTravel (x*)))
-    service_rt_Requests_executed_in_background_threads_of_com.dynatrace.easytravel.weblauncher.jar_easyTravel_(x*): MV2;MicroSecond;metricSelector=builtin:service.response.server:splitBy("dt.entity.service"):auto:names:filter(eq(dt.entity.service,Requests executed in background threads of com.dynatrace.easytravel.weblauncher.jar easyTravel (x*)))
-    service_rt_VerificationService: MV2;MicroSecond;metricSelector=builtin:service.response.server:splitBy("dt.entity.service"):auto:names:filter(eq(dt.entity.service,VerificationService))
-    service_rt_Web_Launcher: MV2;MicroSecond;metricSelector=builtin:service.response.server:splitBy("dt.entity.service"):auto:names:filter(eq(dt.entity.service,Web Launcher))
-    service_rt_dotNetBackend_easyTravel_x64: MV2;MicroSecond;metricSelector=builtin:service.response.server:splitBy("dt.entity.service"):auto:names:filter(eq(dt.entity.service,dotNetBackend_easyTravel_x64))
-    service_rt_dotNetBackend_easyTravel_x64:9010: MV2;MicroSecond;metricSelector=builtin:service.response.server:splitBy("dt.entity.service"):auto:names:filter(eq(dt.entity.service,dotNetBackend_easyTravel_x64:9010))
-    service_rt_dotNetCommon.RemoteTime: MV2;MicroSecond;metricSelector=builtin:service.response.server:splitBy("dt.entity.service"):auto:names:filter(eq(dt.entity.service,dotNetCommon.RemoteTime))
-    service_rt_dotNetFrontend_easyTravel_x64: MV2;MicroSecond;metricSelector=builtin:service.response.server:splitBy("dt.entity.service"):auto:names:filter(eq(dt.entity.service,dotNetFrontend_easyTravel_x64))
-    service_rt_dotNetFrontend_easyTravel_x64:9000: MV2;MicroSecond;metricSelector=builtin:service.response.server:splitBy("dt.entity.service"):auto:names:filter(eq(dt.entity.service,dotNetFrontend_easyTravel_x64:9000))
-    service_rt_easyTravel_Business_Backend: MV2;MicroSecond;metricSelector=builtin:service.response.server:splitBy("dt.entity.service"):auto:names:filter(eq(dt.entity.service,easyTravel Business Backend))
-    service_rt_easyTravel_Customer_Frontend: MV2;MicroSecond;metricSelector=builtin:service.response.server:splitBy("dt.entity.service"):auto:names:filter(eq(dt.entity.service,easyTravel Customer Frontend))
-    service_rt_easyTravel_Third_Party_Content_Server: MV2;MicroSecond;metricSelector=builtin:service.response.server:splitBy("dt.entity.service"):auto:names:filter(eq(dt.entity.service,easyTravel Third Party Content Server))
-    service_rt_volatile_WebRequest: MV2;MicroSecond;metricSelector=builtin:service.response.server:splitBy("dt.entity.service"):auto:names:filter(eq(dt.entity.service,volatile WebRequest))
+    service_cpu: metricSelector=builtin:service.cpu.perRequest:splitBy():auto:names
+    service_rt: entitySelector=type(SERVICE),entityName("BookingService")&metricSelector=builtin:service.response.server:splitBy("dt.entity.service"):auto:names
